# AegisWASM

./: CMakeLists.txt  animatedqgroupbox.h  borderproperty.h  combatinventory.cpp  combatinventory.h  combatinventory.ui  config.h  config.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  markcoords.cpp  markcoords.h  minimize.cpp  minimize.h  mytooltip.cpp  mytooltip.h  parametric_data_entry.html  parametricdataentry.cpp  parametricdataentry.h  parametricdataentry.ui  qtexteditborder.h
css/: stylesheetNick.css
data/: mydb.db
qml/: markqml.qml  positqml.qml
